# QtQmlTemplate

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
assets/modules/: main.qml
cmake/: AdditionalDependencies.cmake  AutoQtQml.cmake  Config.cmake
include/: version.h.in
src/: main.cpp
